修改 w6 className 命名

--- a/homeworks/week6/hw1/index.html
+++ b/homeworks/week6/hw1/index.html
@@ -28,11 +28,11 @@
 		</div>
 	</nav>
 	<!-- 咬一口廚房 --> <!-- 圖片要全版還是卡中間？ -->
-	<section class='banner'>
+	<div class='banner'>
 		<h1>咬一口廚房</h1>
-	</section>
+	</div>
 	<div class='wrapper'> <!-- 寬度限制在一定的寬度 -->
-		<section class='section'>
+		<section class='section__news'>
 			<h2 class='section__title'>當輕食之風盛起</h2>
 			<p class='section__desc'>
 				由於現代人生活忙碌，常以外食為主，當高糖、高鹽、高油成為人們的日常，會導致慢性疾病與肥胖的機率大增。
@@ -52,7 +52,7 @@
 		</section>
 	</div>
 	<!-- Menu 搶先看 -->
-	<section class='section'>
+	<section class='section__menu'>
 		<h2 class='section__title'>Menu 搶先看</h2>
 		<div class='section__images'>
 			<div><img src='f-001.png'></img></div>
@@ -62,8 +62,8 @@
 		</div>
 	</section>
 	<!-- comments:吃過的都說好 -->
-	<section class='wrapper'>
-		<div class='section'>
+	<div class='wrapper'>
+		<section class='section__comments'>
 			<div class='section__all-comments'>
 			<h2 class='section__title'>吃過都說好</h2>
 			<div class='section__comments'>
@@ -107,7 +107,7 @@
 		</div> <!-- end .section -->
 	</section> <!-- end .wrapper -->
 	<!-- 我們在哪裡？ -->
-		<section class='section'>
+		<section class='section__location'>
 			<h2 class='section__title'>
 				我們在哪裡？
 			</h2>
