--- a/homeworks/week6/hw2/index.html
+++ b/homeworks/week6/hw2/index.html
@@ -43,12 +43,10 @@
 			<div class='form__question'>
 				<div class='form__title'>報名類型</div>
 				<div class='form__btn-radio'>
-					<input type='radio' id='think' name='sport__type'></input>
-					<label for='think'>躺在床上用想像力實作</label>
+					<label><input type='radio' id='think' name='sport__type'></input>躺在床上用想像力實作</label>
 				</div> <!-- end .form__btn-radio -->
 				<div class='form__btn-radio cellphone'>
-					<input type='radio' id='cellphone'></input>
-					<label for='cellphone' name='sport__type'>趴在地上滑手機找現成的</label>
+					<label><input type='radio' id='cellphone' name='sport__type'></input>趴在地上滑手機找現成的</label>
 				</div> <!-- end .form__btn-radio -->
 			</div> <!-- end .form__question -->
 		<div class='form__question'>
