--- a/homeworks/week12/hw1/index.html
+++ b/homeworks/week12/hw1/index.html
@@ -9,6 +9,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src='https://code.jquery.com/jquery-3.6.0.js'></script>
+  <style>
+    .card {
+      word-wrap: break-word;
+      white-space: pre-line;
+    }
+  </style>
   <script>
 
     function escape(str) {
@@ -67,11 +73,11 @@
 
       $('.btn-submit').click(function (e) {
         e.preventDefault();
+
         const newCommentData = {
           site_key: 'jean',
           nickname: $('input[name=nickname]').val(),
           content: $('textarea[name=content]').val(),
-
         }
         $.ajax({
           type: 'POST',
@@ -82,11 +88,12 @@
             alert(data.message);
             return;
           }
-          appendCommentToDOM(commentDOM, newCommentData, true);
-          $('textarea[name=content]').val('')
-          $('input[name=nickname]').val('')
-
         })
+        getComments();
+        appendCommentToDOM(commentDOM, newCommentData, true);
+        $('textarea[name=content]').val('')
+        $('input[name=nickname]').val('')
+
       })
     });
 
